--- a/numberprogramming.ipynb
+++ b/numberprogramming.ipynb
@@ -249,14 +249,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max occuring digit 2\n"
+      "[0, 1, 2, 3, 5, 9, 1, 1, 1, 1]\n",
+      "max occuring digit 5\n"
      ]
     }
    ],
@@ -268,7 +269,7 @@
     "    d=num1%10\n",
     "    list[d]+=1\n",
     "    num1=num1//10\n",
-    "\n",
+    "print(list)\n",
     "max_count=0\n",
     "max_d=0\n",
     "i=0\n",
@@ -544,14 +545,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n"
+      "123246369\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 2, 2, 1, 0, 2, 0, 0, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "not fascinating number\n"
      ]
     }
    ],
@@ -559,9 +564,27 @@
     "#fascinating number\n",
     "n=int(input())\n",
     "n1=str(n)+str(n*2)+str(n*3)\n",
-    "n1=int(n1)\n",
-    "print(type(n1))\n",
-    "l=[0]*10\n"
+    "n2=int(n1)\n",
+    "print(n2)\n",
+    "list=[0]*10\n",
+    "\n",
+    "while n2!=0:\n",
+    "    digit=n2%10\n",
+    "    list[digit]+=1\n",
+    "    n2=n2//10\n",
+    "\n",
+    "list2=[1]*10\n",
+    "\n",
+    "del list[0]\n",
+    "print(list)\n",
+    "\n",
+    "del list2[0]\n",
+    "print(list2)\n",
+    "\n",
+    "if list==list2:\n",
+    "    print(\"fascinating number\")\n",
+    "else:\n",
+    "    print(\"not fascinating number\")"
    ]
   }
  ],
