--- a/stringprograming.ipynb
+++ b/stringprograming.ipynb
@@ -493,6 +493,703 @@
     "    i+=2\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abbcccd\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='ab2c3d'\n",
+    "i=0\n",
+    "res=''\n",
+    "while i < len(st)-1:\n",
+    "    ch=st[i]\n",
+    "    ch1=st[i+1]\n",
+    "\n",
+    "    if  ch>=\"a\" and ch<=\"z\" and ch1 >='0' and ch1<='9':\n",
+    "        res+=ch*int(ch1)\n",
+    "    elif ch>=\"a\" and ch<=\"z\" and ch1>=\"a\" and ch1<=\"z\":\n",
+    "        res+=ch\n",
+    "    i+=1\n",
+    "res+=st[-1]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abbcccdedd\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='ab2c3ded2'\n",
+    "i=0\n",
+    "res=''\n",
+    "while i < len(st)-1:\n",
+    "    ch=st[i]\n",
+    "    ch1=st[i+1]\n",
+    "\n",
+    "    if  ch>=\"a\" and ch<=\"z\" and ch1 >='0' and ch1<='9':\n",
+    "        res+=ch*int(ch1)\n",
+    "    elif ch>=\"a\" and ch<=\"z\" and ch1>=\"a\" and ch1<=\"z\":\n",
+    "        res+=ch\n",
+    "    i+=1\n",
+    "if st[-1]>='a' and st[-1]<='z':\n",
+    "    res+=st[-1]\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no of alphbets: 13\n",
+      "no of digits: 6\n",
+      "no of special characters: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "c1=0\n",
+    "c2=0\n",
+    "c3=0\n",
+    "for i in st:\n",
+    "    if (i>=\"a\" and i<=\"z\") or  (i>=\"A\" and i<=\"Z\") :\n",
+    "        c1+=1\n",
+    "    elif i>=\"0\" and i<=\"9\":\n",
+    "        c2+=1\n",
+    "    else:\n",
+    "        c3+=1\n",
+    "print('no of alphbets:',c1)\n",
+    "print('no of digits:',c2)\n",
+    "print('no of special characters:',c3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "s=0\n",
+    "for i in st:\n",
+    "    if i>='0' and i<='9':\n",
+    "        s+=int(i)\n",
+    "    \n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='''  Hiii how are you \n",
+    "      hope your doing well  .\n",
+    "      '''\n",
+    "c=0\n",
+    "i=1\n",
+    "while i<len(st):\n",
+    "    ch=st[i-1]\n",
+    "    ch1=st[i]\n",
+    "    if ch!=' '  and  ch1==' ':\n",
+    "        c+=1\n",
+    "    i+=1\n",
+    "if st[0]==' ':\n",
+    "    c-=1\n",
+    "    \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=\" hello how are you \"\n",
+    "c=0\n",
+    "i=1\n",
+    "while i<len(st):\n",
+    "    ch=st[i-1]\n",
+    "    ch1=st[i]\n",
+    "    if ch!=''  and  ch1==' ':\n",
+    "        c+=1\n",
+    "    i+=1\n",
+    "if st[0]=='':\n",
+    "    c-=1\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mahalakshmi\n",
+      "a\n",
+      "first occurence is at index: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=0\n",
+    "c=0\n",
+    "while i<len(st):\n",
+    "    \n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        if c<=1:\n",
+    "            print(\"first occurence is at index:\" ,i)\n",
+    "    i+=1\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "schoool\n",
+      "o\n",
+      "last occurence: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=len(st)-1\n",
+    "c=0\n",
+    "while i >= 0:\n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        if c<=1:\n",
+    "            print(\"last occurence is at index:\",i)\n",
+    "    i-=1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mahalakshmi\n",
+      "a\n",
+      "not first occurence is at index: 3\n",
+      "not first occurence is at index: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=0\n",
+    "c=0\n",
+    "while i<len(st):\n",
+    "    \n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        if c!=1:\n",
+    "            print(\"not first occurence is at index:\" ,i)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bbbbkkkkmmmnoybdlkjhg\n",
+      "b\n",
+      " not last occurence is at index: 3\n",
+      " not last occurence is at index: 2\n",
+      " not last occurence is at index: 1\n",
+      " not last occurence is at index: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=len(st)-1\n",
+    "c=0\n",
+    "while i >= 0:\n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        if c!=1:\n",
+    "            print(\" not last occurence is at index:\",i)\n",
+    "    i-=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mmahalakshm\n",
+      "m\n",
+      "mahalakshm\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=0\n",
+    "c=0\n",
+    "while i<len(st):\n",
+    "    \n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        if c<=1:\n",
+    "            res=st[0:i]+st[i+1:]\n",
+    "    i+=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mahalakshmi\n",
+      "a\n",
+      "mahalkshmi\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=len(st)-1\n",
+    "c=0\n",
+    "while i >= 0:\n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        if c<=1:\n",
+    "            res=st[0:i]+st[i+1:]\n",
+    "    i-=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ramanujan\n",
+      "a\n",
+      "count of specific character :  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "st=input()\n",
+    "ch=input()\n",
+    "print(st)\n",
+    "print(ch)\n",
+    "i=0\n",
+    "c=0\n",
+    "while i<len(st):\n",
+    "    \n",
+    "    if st[i]==ch:\n",
+    "        c+=1\n",
+    "        \n",
+    "    i+=1\n",
+    "print(\"count of specific character : \",c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "school\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "print(st)\n",
+    "st1=st\n",
+    "max_c=0\n",
+    "max_occured=st[0]\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    ch=st[i]\n",
+    "    st2=st1\n",
+    "    j=0\n",
+    "    c=0\n",
+    "    while j<len(st2):\n",
+    "        if ch==st2[j]:\n",
+    "            c+=1\n",
+    "        j+=1\n",
+    "    if c>max_c:\n",
+    "        max_c=c\n",
+    "        max_occured=ch\n",
+    "        \n",
+    "    i+=1\n",
+    "print(max_occured)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qwertyuioppoiuytrewqs\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "print(st)\n",
+    "st1=st\n",
+    "min_c=len(st)\n",
+    "min_occured=st[0]\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    ch=st[i]\n",
+    "    st2=st1\n",
+    "    j=0\n",
+    "    c=0\n",
+    "    while j<len(st2):\n",
+    "        if ch==st2[j]:\n",
+    "            c+=1\n",
+    "        j+=1\n",
+    "    if c<min_c:\n",
+    "        min_c=c\n",
+    "        min_occured=ch\n",
+    "        \n",
+    "    i+=1\n",
+    "print(min_occured)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eoo123aii\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"hello world 123 haii\"\n",
+    "res=\"\"\n",
+    "for i in ip:\n",
+    "    if i>='0' and i<='9' or i in 'aeiou':\n",
+    "        res+=i\n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eo o 123 aii\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"hello world 123 haii\"\n",
+    "res=\"\"\n",
+    "for i in ip:\n",
+    "    if i>='0' and i<='9' or i in 'aeiou' or i==' ':\n",
+    "        res+=i\n",
+    "print(res)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eo o  aii\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"hello world 123 haii\"\n",
+    "res=\"\"\n",
+    "for i in ip:\n",
+    "    if  i in 'aeiou' or i==' ':\n",
+    "        res+=i\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hllo world 123 haii\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"hello world 123 haii\"\n",
+    "res=\"\"\n",
+    "c=0\n",
+    "for i in ip:\n",
+    "\n",
+    "    if  i in 'aeiou' and c==0:\n",
+    "        c+=1\n",
+    "    else:\n",
+    "        res+=i\n",
+    "        \n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hll wrld\n",
+      " eoo\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"hello world\"\n",
+    "res1=\" \"\n",
+    "res2=\" \"\n",
+    "for i in ip:\n",
+    "    if i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    else:\n",
+    "        res1+=i\n",
+    "print(res1)\n",
+    "print(res2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hll wrld\n",
+      " eoo\n",
+      " 12344\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"12hello3 4world4\"\n",
+    "res1=\" \"\n",
+    "res2=\" \"\n",
+    "res3=\" \"\n",
+    "for i in ip:\n",
+    "    if i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res1+=i\n",
+    "print(res1)\n",
+    "print(res2)\n",
+    "print(res3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hllwrld\n",
+      " eoo\n",
+      " 12344\n",
+      " (*$ $#*)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"(*12hello3$ $4#world4*)\"\n",
+    "res1=\" \"\n",
+    "res2=\" \"\n",
+    "res3=\" \"\n",
+    "res4=\" \"\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z' and i not in 'aeiou':\n",
+    "        res1+=i\n",
+    "    elif  i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res4+=i\n",
+    "print(res1)\n",
+    "print(res2)\n",
+    "print(res3)\n",
+    "print(res4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ")*#$ $*( ,44321 ,ooe ,dlrwllh \n"
+     ]
+    }
+   ],
+   "source": [
+    "ip=\"(*12hello3$ $4#world4*)\"\n",
+    "res1=\" \"\n",
+    "res2=\" \"\n",
+    "res3=\" \"\n",
+    "res4=\" \"\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z' and i not in 'aeiou':\n",
+    "        res1+=i\n",
+    "    elif  i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res4+=i\n",
+    "print(res4[::-1],res3[::-1],res2[::-1],res1[::-1],sep=\",\")"
+   ]
   }
  ],
  "metadata": {
