--- a/stringprograming.ipynb
+++ b/stringprograming.ipynb
@@ -984,6 +984,7 @@
     }
    ],
    "source": [
+    "#121\n",
     "ip=\"hello world 123 haii\"\n",
     "res=\"\"\n",
     "for i in ip:\n",
@@ -1006,6 +1007,7 @@
     }
    ],
    "source": [
+    "#122\n",
     "ip=\"hello world 123 haii\"\n",
     "res=\"\"\n",
     "for i in ip:\n",
@@ -1029,6 +1031,7 @@
     }
    ],
    "source": [
+    "#123\n",
     "ip=\"hello world 123 haii\"\n",
     "res=\"\"\n",
     "for i in ip:\n",
@@ -1039,27 +1042,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hllo world 123 haii\n"
+      "hll world  haii\n"
      ]
     }
    ],
    "source": [
+    "#124\n",
     "ip=\"hello world 123 haii\"\n",
     "res=\"\"\n",
     "c=0\n",
+    "i=0\n",
     "for i in ip:\n",
-    "\n",
-    "    if  i in 'aeiou' and c==0:\n",
+    "    if i in \"aeiou\" and c<2 or (i>='0' and i<=\"9\"):\n",
     "        c+=1\n",
     "    else:\n",
     "        res+=i\n",
+    "\n",
     "        \n",
     "print(res)"
    ]
@@ -1079,6 +1084,7 @@
     }
    ],
    "source": [
+    "#125\n",
     "ip=\"hello world\"\n",
     "res1=\" \"\n",
     "res2=\" \"\n",
@@ -1107,6 +1113,7 @@
     }
    ],
    "source": [
+    "#125\n",
     "ip=\"12hello3 4world4\"\n",
     "res1=\" \"\n",
     "res2=\" \"\n",
@@ -1140,6 +1147,8 @@
     }
    ],
    "source": [
+    "\n",
+    "#127\n",
     "ip=\"(*12hello3$ $4#world4*)\"\n",
     "res1=\" \"\n",
     "res2=\" \"\n",
@@ -1162,23 +1171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ")*#$ $*( ,44321 ,ooe ,dlrwllh \n"
+      ")*#$ $*(,44321,ooe,dlrwllh\n"
      ]
     }
    ],
    "source": [
+    "#128\n",
     "ip=\"(*12hello3$ $4#world4*)\"\n",
-    "res1=\" \"\n",
-    "res2=\" \"\n",
-    "res3=\" \"\n",
-    "res4=\" \"\n",
+    "res1=\"\"\n",
+    "res2=\"\"\n",
+    "res3=\"\"\n",
+    "res4=\"\"\n",
     "for i in ip:\n",
     "    if i>='a' and i<='z' and i not in 'aeiou':\n",
     "        res1+=i\n",
@@ -1188,7 +1198,589 @@
     "        res3+=i\n",
     "    else:\n",
     "        res4+=i\n",
-    "print(res4[::-1],res3[::-1],res2[::-1],res1[::-1],sep=\",\")"
+    "print(res4[::-1],res3[::-1],res2[::-1],res1[::-1],sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hllwrld,eoo,12344,(*$ $#*)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#129\n",
+    "ip=\"(*12hello3$ $4#world4*)\"\n",
+    "res1=\"\"\n",
+    "res2=\"\"\n",
+    "res3=\"\"\n",
+    "res4=\"\"\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z' and i not in 'aeiou':\n",
+    "        res1+=i\n",
+    "    elif  i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res4+=i\n",
+    "print(res1,res2,res3,res4,sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hllwrld,)*#$ $*(,eoo,44321\n"
+     ]
+    }
+   ],
+   "source": [
+    "#130\n",
+    "ip=\"(*12hello3$ $4#world4*)\"\n",
+    "res1=\"\"\n",
+    "res2=\"\"\n",
+    "res3=\"\"\n",
+    "res4=\"\"\n",
+    "\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z' and i not in 'aeiou':\n",
+    "        res1+=i\n",
+    "    elif  i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res4+=i\n",
+    "print(res1,res4[::-1],res2,res3[::-1],sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ")*#$ $*(,44321,ooe,dlrwllh\n"
+     ]
+    }
+   ],
+   "source": [
+    "#131\n",
+    "ip=\"(*12hello3$ $4#world4*)\"\n",
+    "res1=\"\"\n",
+    "res2=\"\"\n",
+    "res3=\"\"\n",
+    "res4=\"\"\n",
+    "\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z' and i not in 'aeiou':\n",
+    "        res1+=i\n",
+    "    elif  i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res4+=i\n",
+    "print(res4[::-1],res3[::-1],res2[::-1],res1[::-1],sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlrwllh )*#$ $*( ooe 44321\n"
+     ]
+    }
+   ],
+   "source": [
+    "#132\n",
+    "ip=\"(*12hello3$ $4#world4*)\"\n",
+    "res1=\"\"\n",
+    "res2=\"\"\n",
+    "res3=\"\"\n",
+    "res4=\"\"\n",
+    "\n",
+    "for i in ip:\n",
+    "    if i>='a' and i<='z' and i not in 'aeiou':\n",
+    "        res1+=i\n",
+    "    elif  i in 'aeiou':\n",
+    "        res2+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res3+=i\n",
+    "    else:\n",
+    "        res4+=i\n",
+    "print(res1[::-1],res4[::-1],res2[::-1],res3[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h$ll*w*rld\n"
+     ]
+    }
+   ],
+   "source": [
+    "#133\n",
+    "ip='HELLOWORLD'\n",
+    "res=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\":\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+=i\n",
+    "    elif i=='E':\n",
+    "        res+=\"$\"\n",
+    "    elif i=='O':\n",
+    "        res+=\"*\"    \n",
+    "print(res)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hllwrld21\n"
+     ]
+    }
+   ],
+   "source": [
+    "#134\n",
+    "ip='123HELLO WORLD456'\n",
+    "res=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\" and not(i>='0' and i<='9'):\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+=i\n",
+    "res+=ip[1]+ip[0]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123hEllO wOrld456\n"
+     ]
+    }
+   ],
+   "source": [
+    "#135\n",
+    "ip='123HELLO WORLD456'\n",
+    "res=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\" and not(i>='0' and i<='9') :\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+=i\n",
+    "    elif i in \"AEIOU\" or i==' ' :\n",
+    "        res+=i\n",
+    "    elif i>='0' and i<='9':\n",
+    "        res+=i\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321hEllO wOrld654\n"
+     ]
+    }
+   ],
+   "source": [
+    "#136\n",
+    "ip='123HELLO WORLD456'\n",
+    "res=''\n",
+    "res1=''\n",
+    "res2=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\" and not(i>='0' and i<='9') :\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+=i\n",
+    "    elif i in \"AEIOU\" or i==' ' :\n",
+    "        res+=i\n",
+    "    elif i>='0' and i<='3':\n",
+    "        res1+=i\n",
+    "    elif i>='4' and i <='6':\n",
+    "        res2+=i\n",
+    "      \n",
+    "print(res1[::-1]+res+res2[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321*E**O *O***654\n"
+     ]
+    }
+   ],
+   "source": [
+    "#137\n",
+    "ip='123HELLO WORLD456'\n",
+    "res=''\n",
+    "res1=''\n",
+    "res2=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\" and not(i>='0' and i<='9') :\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+='*'\n",
+    "    elif i in \"AEIOU\" or i==' ' :\n",
+    "        res+=i\n",
+    "    elif i>='0' and i<='3':\n",
+    "        res1+=i\n",
+    "    elif i>='4' and i <='6':\n",
+    "        res2+=i\n",
+    "      \n",
+    "print(res1[::-1]+res+res2[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123*E**O *O***456\n"
+     ]
+    }
+   ],
+   "source": [
+    "#138\n",
+    "ip='123HELLO WORLD456'\n",
+    "res=''\n",
+    "res1=''\n",
+    "res2=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\" and not(i>='0' and i<='9') :\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+='*'\n",
+    "    elif i in \"AEIOU\" or i==' ' :\n",
+    "        res+=i\n",
+    "    elif i>='0' and i<='3':\n",
+    "        res1+=i\n",
+    "    elif i>='4' and i <='6':\n",
+    "        res2+=i\n",
+    "      \n",
+    "print(res1+res+res2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h$ll*w*rld\n"
+     ]
+    }
+   ],
+   "source": [
+    "#139\n",
+    "ip='HELLOWORLD'\n",
+    "res=''\n",
+    "for i in ip:\n",
+    "    if i>='A' and i<='Z' and i not in \"AEIOU\":\n",
+    "        i=chr(ord(i)+32)\n",
+    "        res+=i\n",
+    "    elif i=='E':\n",
+    "        res+=\"$\"\n",
+    "    elif i=='O':\n",
+    "        res+=\"*\"    \n",
+    "print(res)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "axbycz\n"
+     ]
+    }
+   ],
+   "source": [
+    "#140\n",
+    "ip1=\"abc\"\n",
+    "ip2='xyz'\n",
+    "res=''\n",
+    "i=0\n",
+    "while i<len(ip1):\n",
+    "        res+=ip1[i]+ip2[i]\n",
+    "        i+=1\n",
+    "print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "axbyczw\n"
+     ]
+    }
+   ],
+   "source": [
+    "#141\n",
+    "ip1=\"abc\"\n",
+    "ip2='xyzw'\n",
+    "res=''\n",
+    "i=0\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
+    "    i+=1\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "axbyczd\n"
+     ]
+    }
+   ],
+   "source": [
+    "#142\n",
+    "ip1=\"abcd\"\n",
+    "ip2='xyz'\n",
+    "res=''\n",
+    "i=0\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
+    "    i+=1\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "axbyczwop\n"
+     ]
+    }
+   ],
+   "source": [
+    "#143\n",
+    "ip1=\"abc\"\n",
+    "ip2='xyzwop'\n",
+    "res=''\n",
+    "i=0\n",
+    "while i<len(ip1) or i<len(ip2):\n",
+    "    if i<len(ip1):\n",
+    "        res+=ip1[i]\n",
+    "    if i<len(ip2):\n",
+    "        res+=ip2[i]\n",
+    "    i+=1\n",
+    "\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1b2c3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#144\n",
+    "ip='abc123'\n",
+    "res=''\n",
+    "i=0\n",
+    "m=len(ip)//2\n",
+    "while i<m:\n",
+    "    if i<len(ip):\n",
+    "        res+=ip[i]+ip[m+i]\n",
+    "    i+=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#145\n",
+    "ip='abc12'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#146"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#147"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#148\n",
+    "ip='abcdnmpoijkl12yzabcd5'\n",
+    "c=0\n",
+    "for i in ip:\n",
+    "    if i>='0' and i<='9':\n",
+    "        c+=1\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HA1I2I3 HE4LLO5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#149\n",
+    "ip='HAII HELLO'\n",
+    "res=''\n",
+    "c=0\n",
+    "for i in ip:\n",
+    "    if i in 'AEIOU':\n",
+    "        c+=1\n",
+    "        res+=i+str(c)\n",
+    "    else:\n",
+    "        res+=i\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1AII 2H3EL4L5O\n"
+     ]
+    }
+   ],
+   "source": [
+    "#150\n",
+    "ip='HAII HELLO'\n",
+    "res=''\n",
+    "c=0\n",
+    "for i in ip:\n",
+    "    if i not in 'AEIOU':\n",
+    "        c+=1\n",
+    "        res+=i+str(c)\n",
+    "    else:\n",
+    "        res+=i\n",
+    "print(res)"
    ]
   }
  ],
