--- a/stringprograming.ipynb
+++ b/stringprograming.ipynb
@@ -1685,7 +1685,9 @@
    "outputs": [],
    "source": [
     "#145\n",
-    "ip='abc12'\n"
+    "ip='abc12'\n",
+    "res=''\n",
+    "for i in ip:\n"
    ]
   },
   {
