--- a/numberprogramming.ipynb
+++ b/numberprogramming.ipynb
@@ -545,18 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123246369\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 2, 2, 1, 0, 2, 0, 0, 1]\n",
+      "192384576\n",
       "[1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "not fascinating number\n"
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "fascinating number\n"
      ]
     }
    ],
